updated herman filename

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4 text-center">
-          <img class="img-circle" alt="140x140" src="./img/herman.jpg" style="width: 140px; height: 140px;">
+          <img class="img-circle" alt="140x140" src="./img/herm.jpg" style="width: 140px; height: 140px;">
           <h3>Herman Chu</h3>
           <p>Herman has more than a decade of experience building complex applicaions in Java and Python. He's an expert in Data Structures, Large Application Architecture. More recently he's become well versed in Hadoop and Big Data solutions, as well as Dev Ops and Virtualization technologies. Herman formerly served as lead developer for several high-profile custom Data Visualization applications for the US Air Force and US Navy. More recently, he has helped develop pricing analytics for large business proposals, and helped develop an interactive data visualization module for a large international energy company. </p>
           
