--- a/pipelines.html
+++ b/pipelines.html
@@ -19,8 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand nav-link" href="#top"></a>
-        </div> <!-- /.navbar-header -->
+          <a class="navbar-brand nav-link" href="./index.html#top"><img src="./img/apexvis_logo_flat_white2.png"></a>        </div> <!-- /.navbar-header -->
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -84,6 +83,20 @@
 
       </div> <!-- /.col-md-10 -->
     </div> <!-- /.row -->
+
+    <div class="sect-border"></div>
+
+      <h3 id="about" class="subhead">Contact</h3>
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1 text-center">
+	        <section class="highlights">
+	          <p>Would you like to learn more?</p>
+	          <p>Reach us at <a href="mailto:info@apexvis.com">info@apexvis.com</a> </p>
+	        </section>
+        </div> <!-- /.col-md-10 -->
+      </div> <!-- /.row -->
+
+    <div class="sect-border"></div>
 
 
 
