--- a/pipelines.html
+++ b/pipelines.html
@@ -23,10 +23,10 @@
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html#about" class="nav-link">About</a></li>
-            <li><a href="index.html#caps" class="nav-link">Capabilities</a></li>
-            <li><a href="index.html#team" class="nav-link">Our Team</a></li>
-            <li><a href="index.html#contact" class="nav-link">Contact Us</a></li>
+            <li><a href="index.html#aboutext" class="nav-link">About</a></li>
+            <li><a href="index.html#capsext" class="nav-link">Capabilities</a></li>
+            <li><a href="index.html#teamext" class="nav-link">Our Team</a></li>
+            <li><a href="index.html#contactext" class="nav-link">Contact Us</a></li>
           </ul>
         </div> <!-- /.navbar-collapse -->
       </div> <!-- /.container -->
