#top scroll fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand nav-link" href="#top"><img src="./img/apexvis_logo_flat_white2.png"></a>
+          <a class="navbar-brand nav-link indexpage" href="#top"><img src="./img/apexvis_logo_flat_white2.png"></a>
         </div> <!-- /.navbar-header -->
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
