fixed more padding issues for top image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
     <a name="top"></a>
-    <div id="top" class="jumbotron bkimg">
+    <div id="top" class="jumbotron bgimg">
       <div class="container">
         <h1><img src="img/apexvis_logo_white.png" width="30%"></h1>
         <h2 class="title-font">Bring your data to life!</h2>
