datamining page add

--- a/datamining.html
+++ b/datamining.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>ApexVis Pipeline Visualization &mdash; Bring Your Data to Life!</title>
+    <title>ApexVis Data Mining &mdash; Bring Your Data to Life!</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/strapped.css" rel="stylesheet">
@@ -34,7 +34,7 @@
 
     <div class="sect-border"></div>
 
-    <h3 class="text-center capability-title subhead"> Pipeline Management </h3>
+    <h3 class="text-center capability-title subhead"> Data Mining </h3>
 
 
     <div class="container">
@@ -45,37 +45,37 @@
 
       <hr class="featurette-divider">
 
+        <div class="col-md-12">
+          <h2 class="featurette-heading">Capture & Analyze Information From Large, Quickly Changing Data Sets
+          <span class="text-muted"><br></span></h2>
+          <p class="lead">As the volume of information has exploded in the last decase, organizations increasingly require good decisions to be made based on large volumes of data that comes in a variety of unstructured or loosely structured forms.</p>
+          <p class="lead">In these cases, an expert's time is far better used interpreting information from the data and creating solutions, rather than struggling to collect, compile, and assess the data.</p>
+          <h3 class="subhead smallsubhead">ApexVis Can Help</h3>
+      </div>
+
+      <hr class="featurette-divider">
+
+
+
       <div class="row featurette">
         <div class="col-md-4">
-          <h2 class="featurette-heading">Customizable Overviews of the Network<span class="text-muted"><br></span></h2>
-          <p class="lead">Filterable, Interactive Overviews Provide Network Health and Batch Location Info at a Glance</p>
+          <h2 class="featurette-heading">Customized Data Discovery and Collection<span class="text-muted"><br>Discover, Tag, Aggregate, Visualize</span></h2>
+          <p class="lead">Custom Web Scrapers and Classification Algorithms to Help Extract Information from Raw Data</p>
         </div>
         <div class="col-md-8">
-          <img class="featurette-image img-responsive" data-src="holder.js/600x600/auto" alt="600x600" src="./img/pipeline_texas_map.png">
+          <img class="featurette-image img-responsive" data-src="holder.js/600x600/auto" alt="600x600" src="./img/dmining2.png">
         </div>
       </div><br>
 
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-8">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="./img/detail_pipeline_view.png">
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="./img/dmining1.png">
         </div>
-        <div class="col-md-4">
-          <h2 class="featurette-heading">Customizable, dynamically updating drill down views <span class="text-muted"></span></h2>
-          <p class="lead">See detailed information on each particular line, depicting a variety of metrics.</p>
-        </div>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="row featurette">
-        <div class="col-md-4">
-          <h2 class="featurette-heading">Custom Timeline Views of Batch Lifecycles<span class="text-muted"></span></h2>
-          <p class="lead">Enable schedulers to easily run "what-if" analysis and develop robust schedules</p>
-        </div>
-        <div class="col-md-8">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="./img/pipeline_timeline.png">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Customizable Predictive Analytics<span class="text-muted"><br>Discover Links Between Disparate Data Elements Evaluate Against Preexisting Curated Data Sets</span></h2>
+          <p class="lead"></p>
         </div>
       </div>
 
