--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div> <!-- /.benefit -->
 
         <div class="col-md-4 col-sm-6 benefit">
-          <a href="#">
+          <a href="./datamining.html">
 	          <div class="benefit-ball">
 	            <i class="glyphicon glyphicon-cloud"></i>
 	          </div>
