--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       <div class="sect-border"></div>
 
     	<a name="caps"></a>
-      <h3 id="benefits" class="subhead"><br>Some of Our Capabilities and Experience</h3>
+      <h3 id="benefits" class="subhead"><br>Some of Our Past and Current Work</h3>
       <div class="row">
-      	<p style="font-size:1.2em"class="text-center"> We've developed software solutions to support all of the following operations, and many more </p>
+      	<p style="font-size:1.2em"class="text-center"> Recent examples of client challenges we've developed solutions to address </p>
         <div class="col-md-4 col-sm-6 benefit">
             <span><a href="./pipelines.html"><img src="img/pipe_line_icon_with_oval.png" width="134px"></a></span>
           <h3>Pipeline Management</h3>
