inventory management page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
       <div class="sect-border"></div>
 
     	<a name="caps"></a>
-      <h3 id="benefits" class="subhead"><br>Some of Our Past and Current Work</h3>
+      <h3 id="benefits" class="subhead"><br>Capabilities</h3>
+      <p style="font-size:1.2em" class="text-center">We create visualization and analytic solutions to help decision makers understand complex connections between processes and components within their organization, and make better decisions about them.</p>
+      <p style="font-size:1.2em">We strive to seamlessly integrate with existing systems, leaning twoard augmenting rather than replacing. Our consultative process favors an iterative approach toward development allowing us to produce value quickly.</p>
+
+      <h3 id="benefits" style="font-size:2em" class="subhead"><br>Some of Our Past and Current Work</h3>
       <div class="row">
       	<p style="font-size:1.2em"class="text-center"> Recent examples of client challenges we've developed solutions to address </p>
         <div class="col-md-4 col-sm-6 benefit">
@@ -101,7 +105,7 @@
         </div> <!-- /.benefit -->
 
         <div class="col-md-4 col-sm-6 benefit">
-          	<span><a href="#inventorymgmt"><img src="img/inventory_mgmt_icon_with_oval.png" width="134px"></a></span>
+          	<span><a href="./inventorymgmt.html"><img src="img/inventory_mgmt_icon_with_oval.png" width="134px"></a></span>
           <h3>Inventory Management</h3>
           <p>Predictive analytics for inventory optimization</p>
         </div> <!-- /.benefit -->
