--- a/inventorymgmt.html
+++ b/inventorymgmt.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>ApexVis Data Mining &mdash; Bring Your Data to Life!</title>
+    <title>ApexVis Inventory Management &mdash; Bring Your Data to Life!</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/strapped.css" rel="stylesheet">
@@ -34,11 +34,11 @@
 
     <div class="sect-border"></div>
 
-    <h3 class="text-center capability-title subhead"> Data Mining </h3>
+    <h3 class="text-center capability-title subhead"> Inventory Management </h3>
 
 
     <div class="container">
-      <div class="col-md-10 col-md-offset-1 text-left">
+    	<div class="col-md-10 col-md-offset-1 text-left">
 
 
       <!-- START THE FEATURETTES -->
@@ -46,10 +46,10 @@
       <hr class="featurette-divider">
 
         <div class="col-md-12">
-          <h2 class="featurette-heading">Capture & Analyze Information From Large, Quickly Changing Data Sets
+          <h2 class="featurette-heading">Managing Complex Allocations of Inventories
           <span class="text-muted"><br></span></h2>
-          <p class="lead">As the volume of information has exploded in the last decase, organizations increasingly require good decisions to be made based on large volumes of data that comes in a variety of unstructured or loosely structured forms.</p>
-          <p class="lead">In these cases, an expert's time is far better used interpreting information from the data and creating solutions, rather than struggling to collect, compile, and assess the data.</p>
+          <p class="lead">Management of inventories under uncertain demang is extremely challenging. Historical data to forecast the demand, then optimize the inventory allocation for each warehouse location.</p>
+          <p class="lead">Historical data can be used to identify and weight demand signals, forecast demand levels, optimize positioning of warehouse locations and  allocate inventory to warehouses.
           <h3 class="subhead smallsubhead">ApexVis Can Help</h3>
       </div>
 
@@ -58,23 +58,29 @@
 
 
       <div class="row featurette">
-        <div class="col-md-4">
-          <h2 class="featurette-heading">Customized Data Discovery and Collection<span class="text-muted"><br>Discover, Tag, Aggregate, Visualize</span></h2>
-          <p class="lead">Custom Web Scrapers and Classification Algorithms to Help Extract Information from Raw Data</p>
+        <div class="col-md-12">
+          <h2 class="featurette-heading">Implementation and Integration of World-Class Inventory Management and Optimization Packages<span class="text-muted"></span></h2>
+        </div> <!--col-12-->
+      </div> <!-- row -->
+      <div class="row">
+        <div class="col-md-12">
+          <img class="featurette-image img-responsive" data-src="holder.js/600x600/auto" alt="600x600" src="./img/inventory1.png">
         </div>
-        <div class="col-md-8">
-          <img class="featurette-image img-responsive" data-src="holder.js/600x600/auto" alt="600x600" src="./img/dmining2.png">
-        </div>
-      </div><br>
+      </div>
+      <div class="row featurette">
+        <div class="col-md-12">
+          <p class="lead">We use a variety of software to customize solutions that best suit the needs of the challenge at hand.</p>
+        </div> <!--col-12-->
+      </div> <!-- row -->
 
       <hr class="featurette-divider">
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="./img/dmining1.png">
+          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="500x500" src="./img/inventory2.png">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Customizable Predictive Analytics<span class="text-muted"><br>Discover Links Between Disparate Data Elements Evaluate Against Preexisting Curated Data Sets</span></h2>
+          <h2 class="featurette-heading">Predictive Analytics<span class="text-muted"><br>Help identify potential inventory shortfalls and optimize the allocation of scarce resources</span></h2>
           <p class="lead"></p>
         </div>
       </div>
@@ -89,10 +95,10 @@
       <h3 id="about" class="subhead">Contact</h3>
       <div class="row">
         <div class="col-md-10 col-md-offset-1 text-center">
-          <section class="highlights">
-            <p>Would you like to learn more?</p>
-            <p>Reach us at <a href="mailto:info@apexvis.com">info@apexvis.com</a> </p>
-          </section>
+	        <section class="highlights">
+	          <p>Would you like to learn more?</p>
+	          <p>Reach us at <a href="mailto:info@apexvis.com">info@apexvis.com</a> </p>
+	        </section>
         </div> <!-- /.col-md-10 -->
       </div> <!-- /.row -->
 
@@ -110,7 +116,7 @@
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+		<script src="js/main.js"></script>
 
   </body>
 </html>
