spelling fixes to inventory page

--- a/inventorymgmt.html
+++ b/inventorymgmt.html
@@ -47,8 +47,7 @@
 
         <div class="col-md-12">
           <h2 class="featurette-heading">Managing Complex Allocations of Inventories
-          <span class="text-muted"><br></span></h2>
-          <p class="lead">Management of inventories under uncertain demang is extremely challenging. Historical data to forecast the demand, then optimize the inventory allocation for each warehouse location.</p>
+          <span class="text-muted"><br>Management of inventories under uncertainty is extremely challenging</span></h2>
           <p class="lead">Historical data can be used to identify and weight demand signals, forecast demand levels, optimize positioning of warehouse locations and  allocate inventory to warehouses.
           <h3 class="subhead smallsubhead">ApexVis Can Help</h3>
       </div>
