favicons added to all pages

--- a/datamining.html
+++ b/datamining.html
@@ -8,6 +8,7 @@
     <link href="css/strapped.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:300italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" type="image/x-icon" href="./img/fav.ico" />  
   </head>
   <body>
 
