sankey diagram for irish energy profile

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
       <h3 id="benefits" style="font-size:2em" class="subhead"><br>Some of Our Past and Current Work</h3>
       <div class="row">
       	<p style="font-size:1.2em"class="text-center"> Recent examples of client challenges we've developed solutions to address </p>
-        <div class="col-md-4 col-sm-6 benefit">
+        <div class="col-md-3 col-sm-6 benefit">
             <span><a href="./pipelines.html"><img src="img/pipe_line_icon_with_oval.png" width="134px"></a></span>
           <h3>Pipeline Management</h3>
           <p>Pipeline Scheduling, Visualization,<br>and "What-If" Analysis</p>
         </div> <!-- /.benefit -->
 
-        <div class="col-md-4 col-sm-6 benefit">
+        <div class="col-md-3 col-sm-6 benefit">
           <a href="./datamining.html">
 	          <div class="benefit-ball">
 	            <i class="glyphicon glyphicon-cloud"></i>
@@ -104,10 +104,20 @@
           <p>Extract, classify, and identify key information within large unstructured data sets</p>
         </div> <!-- /.benefit -->
 
-        <div class="col-md-4 col-sm-6 benefit">
+        <div class="col-md-3 col-sm-6 benefit">
           	<span><a href="./inventorymgmt.html"><img src="img/inventory_mgmt_icon_with_oval.png" width="134px"></a></span>
           <h3>Inventory Management</h3>
           <p>Predictive analytics for inventory optimization</p>
+        </div> <!-- /.benefit -->
+        
+        <div class="col-md-3 col-sm-6 benefit">
+            <a href="./energyprofilevis/">
+	          <div class="benefit-ball">
+	            <i class="glyphicon glyphicon-flash"></i>
+	          </div>                               
+            </a>
+          <h3>Energy Use Profiling</h3>
+          <p>Custom energy flow diagrams depicting consumption and production</p>
         </div> <!-- /.benefit -->
 
        
