--- a/energyprofilevis/index.html
+++ b/energyprofilevis/index.html
@@ -59,8 +59,13 @@
 
         <p style="font-size:1.2em" class="text-center">Effectively communicating information contained within tables of data sometimes calls for more than just a simple pie chart or bar chart of results. There are often much richer ways to visualize information, depending on the context of the problem.</p>
         <p style="font-size:1.2em" class="text-center">Sankey diagrams are a custom visualization used to depict categorical flows. This example draws data from the Sustainable Energy Authority of Ireland report, November 2013. Rather than showing data in a series of pie charts and bar charts, this depiction allows the viewer to see at a glance where energy comes from, and where it is being used, with units in kilotonnes of oil equivalent (ktoe)</p>
-
+        
+       
         <div id="chart"></div>
+        <!--[if lte IE 8]>
+          <p>This interactive visualization is not supported below IE9</p>
+          <img src="../img/sankeyimage.png" alt="sankey image">
+        <![endif]-->  
 
         <hr />
 
