--- a/pipelines.html
+++ b/pipelines.html
@@ -85,6 +85,22 @@
       </div> <!-- /.col-md-10 -->
     </div> <!-- /.row -->
 
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-4">
+          <h2 class="featurette-heading">Pipeline Vision&#0153;<span class="text-muted"></span></h2>
+          <p class="lead">The pipeline vision suite of web applicaitons is currently under development. 
+          	If you would like more information or pricing, please click the &quot;contact&quot; link below. 
+          </p>
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      </div> <!-- /.col-md-10 -->
+    </div> <!-- /.row -->
+
     <div class="sect-border"></div>
 
       <h3 id="about" class="subhead">Contact</h3>
