--- a/pipelines.html
+++ b/pipelines.html
@@ -89,10 +89,12 @@
 
       <div class="row featurette">
         <div class="col-md-4">
+        <center>
           <h2 class="featurette-heading">Pipeline Vision&#0153;<span class="text-muted"></span></h2>
-          <p class="lead">The pipeline vision suite of web applicaitons is currently under development. 
+          <p class="lead">The pipeline vision suite of web applications is currently under development. 
           	If you would like more information or pricing, please click the &quot;contact&quot; link below. 
           </p>
+          </center>
         </div>
       </div>
 
