--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>ApexVis Homepage&mdash; Bring Your Data to Life! TEST</title>
+    <title>ApexVis Homepage&mdash; Bring Your Data to Life!</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/strapped.css" rel="stylesheet">
@@ -179,7 +179,7 @@
     <footer>
       <div class="container clearfix">
         <p class="pull-left">
-          Copyright &copy; ApexVis 2014
+          Copyright &copy; ApexVis 2017
         </p>
       </div> <!-- /.container -->
     </footer>
